# Conformal-Elicitation

./: .gitignore  README.md  cp_toy_simulator.py  pyproject.toml  randomized_tie_comformal_two_sample.py
configs/data/: cifar10.yaml  fixed_points.yaml
configs/experiment/: cifar100_coarse_resnet18_v1.yaml  cifar100_fine_resnet18_v1.yaml  cifar10_resnet18_v1.yaml  toy_v1.yaml
configs/method/: direct_cifar10.yaml  direct_cifar100.yaml  direct_pvalue.yaml  greedy_mass_calibrated_cifar10.yaml  greedy_mass_calibrated_cifar100.yaml  greedy_mass_calibrated_probability.yaml  greedy_mass_fixed_cifar10.yaml  greedy_mass_fixed_cifar100.yaml  greedy_mass_fixed_probability.yaml  indirect_cifar10.yaml  indirect_cifar100.yaml  indirect_probability.yaml
configs/model/: mlp_toy.yaml  resnet18_cifar.yaml  resnet18_cifar100_coarse.yaml  resnet18_cifar100_fine.yaml
reports/: cifar100_hierarchy_metrics_table.csv  cifar100_hierarchy_metrics_table.xlsx
scripts/: evaluate_conformal.py  run_cifar100_hierarchy_experiment.py  run_cifar10_experiment.py  run_experiment.py  train_direct.py  train_indirect.py
src/conformal_efficiency/: __init__.py
src/conformal_efficiency/calibration/: temperature.py
src/conformal_efficiency/conformal/: greedy.py  pvalues.py
src/conformal_efficiency/data/: cifar10.py  fixed_points.py
src/conformal_efficiency/evaluation/: metrics.py
src/conformal_efficiency/models/: mlp.py  resnet.py
src/conformal_efficiency/objectives/: direct.py
tests/: test_cifar100_labels.py  test_conformal_pvalues.py  test_greedy_sets.py  test_resnet_model.py
(+9 files in other folders)
